syntax = "proto3";
package pb;
import "pb/common.proto";

option go_package="./pb";

message ExecBlock {
  repeated bytes txs=1;
}

message Result {
    bool success=1;
}

service Executor {
  rpc CommitBlock(ExecBlock) returns (Empty) {}
  rpc VerifyTx(Transaction) returns (Result) {}
}
